k8sconf/30-pod-cdn.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn
spec:
  selector:
    matchLabels:
      app: cdn
  replicas: 1
  template: # create pods; pod template
    metadata:
      labels:
        app: cdn
    spec:
#     restartPolicy: Never
      containers:
      - name: cdn
        image: svlentink/mywebsite
        ports:
        - containerPort: 80
        volumeMounts:
        - name: cdn-pdf
          mountPath: /var/www/cdn.lent.ink/pdf
        - name: cdn-tar
          mountPath: /var/www/cdn.lent.ink/tar
        - name: cdn-img
          mountPath: /var/www/cdn.lent.ink/img
        - name: cdn-lp
          mountPath: /var/www/cdn.lent.ink/lp
      volumes:
      - name: cdn-pdf
        persistentVolumeClaim:
          claimName: cdn-pdf-claim
          readOnly: true
      - name: cdn-tar
        persistentVolumeClaim:
          claimName: cdn-tar-claim
          readOnly: true
      - name: cdn-img
        persistentVolumeClaim:
          claimName: cdn-img-claim
          readOnly: true
      - name: cdn-lp
        persistentVolumeClaim:
          claimName: cdn-lp-claim
          readOnly: true
