k8sconf/31-deploy-ide.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ide
spec:
  selector:
    matchLabels:
      app: ide
  replicas: 1
  template: # create pods; pod template
    metadata:
      labels:
        app: ide
    spec:
      containers:
      - name: ide
        image: sapk/cloud9
        ports:
        - containerPort: 8191
