k8sconf/31-pod-ide.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ide
spec:
  selector:
    matchLabels:
      app: ide
  replicas: 1
  template: # create pods; pod template
    metadata:
      labels:
        app: ide
    spec:
      containers:
      - name: ide
        image: sapk/cloud9
        args: ["--auth", ":"]
        ports:
        - containerPort: 8181
        volumeMounts:
        - name: ide
          mountPath: /workspace
      volumes:
      - name: ide
        persistentVolumeClaim:
          claimName: ide-claim
