k8sconf/21-service-webide.yml
# https://kubernetes.io/docs/concepts/services-networking/connect-applications-service/#exposing-pods-to-the-cluster
apiVersion: v1
kind: Service
metadata:
  name: webide
#  namespace: default
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: ide
